@@ -8,7 +8,7 @@ public class ThreadInfoMain {
         //main Thread
         Thread mainThread = Thread.currentThread();
         MyLogger.log("main Thread = " + mainThread);
-        MyLogger.log("main Thread Id = " + mainThread.threadId()); // Java가 내부적으로 만들어주고 중복되지 않는다.
+        MyLogger.log("main Thread Id = " + mainThread.getId()); // Java가 내부적으로 만들어주고 중복되지 않는다.
         MyLogger.log("main Thread Name = " + mainThread.getName()); // 중복 가능
         MyLogger.log("main Thread Priority = " + mainThread.getPriority());
         // 기본이 5고 높을 수록 조금 더 많이 실행하자! 라고 CPU에게 알려준다. --> 무조건은 아니다. (운영체제가 최적화 해주기 때문)
@@ -17,7 +17,7 @@ public class ThreadInfoMain {
 
         Thread myThread = new Thread(new HelloRunnable(), "myThread");
         MyLogger.log("myThread Thread = " + myThread);
-        MyLogger.log("myThread Thread Id = " + myThread.threadId());
+        MyLogger.log("myThread Thread Id = " + myThread.getId());
         // 17:07:10.015 [     main] myThread Thread Id = 20
         // 20 -> Java가 임의로 실행 해 준다.
         MyLogger.log("myThread Thread Name = " + myThread.getName());
